<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="126dp"
        android:layout_marginLeft="126dp"
        android:layout_marginTop="6dp"
        android:text="@string/main_menu"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textSize="24sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="106dp"
        android:background="@color/colorPrimary"
        android:text="@string/personal_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimary"
        android:text="@string/paperwork"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="31dp"
        android:background="@color/colorPrimary"
        android:text="@string/contract"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimary"
        android:text="@string/banking_information"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="31dp"
        android:background="@color/colorPrimary"
        android:text="@string/tutorials"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="31dp"
        android:layout_height="32dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/questionmark2" />

</android.support.constraint.ConstraintLayout>